# Wuddz-Search-Gui

./: LICENSE  README.md  pyproject.toml
wuddz_search_gui/: search_gui.py  wuddz_search_gui.py
